libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/not-enough-segments.jsonc
//@ run: fail
//@ description: check if we error out if the path has not enough segments
[
  "::kernel::special_form",
  //~^ ERROR cannot find value `special_form` in module `::kernel`
  { "#literal": true },
  { "#literal": 1 },
  { "#literal": 2 }
]
